fixing alignments

--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -128,6 +128,7 @@ input[type="radio"] {
   color: var(--white);
   font-family: "Kode Mono";
   font-size: 16px;
+  margin-top: 50px;
 
   &:hover {
     background-color: var(--zone);
@@ -226,6 +227,12 @@ input[type="radio"] {
   li {
     padding: 0;
   }
+}
+
+.room-link {
+  display: block;
+  text-decoration: none;
+  color: inherit;
 }
 
 .footer-logo {
@@ -494,6 +501,16 @@ label {
 
 .salle-title-2 {
   text-align: start;
+}
+
+.salle-content {
+  display: flex;
+  flex-direction: column;
+}
+
+.salle-content .escape-btn {
+  align-self: flex-start;
+  margin-top: auto;
 }
 
 .salle-witch-text {
